# PyNetLab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.bootstrap/: pynetlab.part-000  pynetlab.part-001  pynetlab.part-002  pynetlab.part-003
.github/workflows/: bootstrap.yml  ci.yml
c/: Makefile
c/01_tcp_echo/: client.c  server.c
c/02_partial_io/: server.c
c/03_nonblocking/: connect.c
c/04_select/: server.c
c/05_poll/: server.c
c/06_epoll/: server.c
c/07_raw_packet/: sniffer.c
c/08_tun_icmp/: tun_icmp.c
c/09_zero_copy/: sendfile_server.c
c/10_io_uring/: server.c
c/common/: net.c  net.h
docs/: EXERCISES.md  INSTALLATION.md  LAB_GUIDE.md  LEARNING_PATH.md  PACKET_PATH.md  TROUBLESHOOTING.md  WIRESHARK.md
ebpf/: README.md  tcp_connect.bt  tcp_retransmit.bt
labs/01_socket_syscalls/: README.md
labs/02_tcp_udp/: README.md
labs/03_nonblocking_io/: README.md
labs/04_select_poll/: README.md
labs/05_epoll/: README.md
labs/06_packet_decode/: README.md
labs/07_raw_socket/: README.md
labs/08_network_namespaces/: README.md
labs/09_veth_bridge/: README.md
labs/10_routing_nat/: README.md
labs/11_tun_tap/: README.md
labs/12_userspace_icmp/: README.md
labs/13_userspace_udp/: README.md
labs/14_tcp_state_machine/: README.md
labs/15_ebpf/: README.md
labs/16_io_uring/: README.md
scripts/: check_environment.sh  setup.sh  setup_ubuntu.sh
scripts/netem/: add_impairment.sh  (+1 more)
tests/: test_async_chat.py  test_framing.py  test_http_basics.py  test_packet_parsers.py
(+34 files in other folders)
